# pim-auto

./: .dockerignore  .gitignore  Dockerfile  README.md  SLICE1_EXECUTIVE_SUMMARY.md  SLICE1_IMPLEMENTATION_SUMMARY.md  SLICE1_VALIDATION_CHECKLIST.md  SLICE2_IMPLEMENTATION_SUMMARY.md  SLICE3_IMPLEMENTATION_SUMMARY.md  SLICE3_VALIDATION_CHECKLIST.md  SLICE4_GOVERNANCE_SUMMARY.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/skills/: log-analytics.skill.md
.github/workflows/: ci.yml
docs/: Deployment-Guide.md  Developer-Setup.md  HLD.md  IMPLEMENTATION_AGENT_HANDOFF.md  Intelligent-Migration-Plan.md  Intelligent-Team-Model.md  LLD.md  Migration-Plan.md  README.md  ROI-and-Budget.md  Risk-and-Governance.md  Runbook.md  Slice-4-Execution-Plan.md  Target-Architecture.md  Test-Strategy.md  requirements.md
docs/ADR/: ADR-001-agent-based-governance.md  ADR-002-specification-first-development.md  ADR-003-azure-native-architecture.md  ADR-004-dual-mode-operation.md  ADR-005-containerization-strategy.md  ADR-006-service-decomposition-approach.md  ADR-007-configuration-management-strategy.md
infrastructure/bicep/: ALERTS-README.md  README.md  alerts.bicep  main.bicep  parameters.dev.json
src/pim_auto/: __init__.py  config.py  main.py
src/pim_auto/azure/: __init__.py  auth.py  log_analytics.py  openai_client.py
src/pim_auto/core/: activity_correlator.py  pim_detector.py  query_generator.py  risk_assessor.py
src/pim_auto/interfaces/: __init__.py  batch_runner.py  interactive_cli.py
src/pim_auto/monitoring/: __init__.py  app_insights.py  health.py  logging.py
src/pim_auto/reporting/: __init__.py  markdown_generator.py
tests/: conftest.py  test_structure.py
tests/integration/: test_batch_mode.py  test_health.py
tests/unit/: test_activity_correlator.py  test_auth.py  test_batch_runner.py  test_config.py  test_health.py  test_interactive_cli.py  test_log_analytics.py  test_main.py  test_markdown_generator.py  test_monitoring.py  test_openai_client.py  test_pim_detection.py  test_pim_detector.py  test_query_generation.py  test_query_generator.py  test_risk_assessor.py
